fix work page sizing on mobile

--- a/assets/css/work_page.scss
+++ b/assets/css/work_page.scss
@@ -11,8 +11,6 @@
 
 	#work-img {
 		flex: 2 1 50%;
-		padding-bottom: 10px;
-		padding-left: 10px;
 		max-width: min(100%, 600px);
 	}
 
@@ -21,17 +19,17 @@
 		flex: 1 1 40%;
 
 		#work-title {
-			font-size: 4em;
+			font-size: min(8vw, 4em);
 			padding-bottom: .5em;
 		}
 
 		#work-specs {
-			font-size: 1.5em;
+			font-size: min(4vw, 1.5em);
 		}
 
 		p {
 			flex: 1;
-			font-size: 1.5em;
+			font-size: min(4vw, 1.5em);
 		}
 
 	}
